# peach-menu

./: .gitignore  Cargo.toml  README.md  view_mockups
debian/: peach-menu.service  postinst  postrm  prerm
src/: buttons.rs  error.rs  lib.rs  main.rs  network.rs  oled.rs  state_machine.rs  states.rs  stats.rs  structs.rs
