[package]
name = "peach-menu"
version = "0.2.1"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Menu for monitoring and interacting with the PeachCloud device. A state machine which listens for GPIO events (button presses) by subscribing to peach-buttons over websockets and makes JSON-RPC calls to relevant PeachCloud microservices."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-menu"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
Menu for monitoring and interacting with the PeachCloud device. \
A state machine which listens for GPIO events (button presses) by \
subscribing to peach-buttons over websockets and makes JSON-RPC calls \
to relevant PeachCloud microservices."""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-menu", "usr/bin/", "755"],
    ["debian/peach-menu.service", "/lib/systemd/system/peach-menu.service", "644"],
    ["README.md", "usr/share/doc/peach-menu/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-menu", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.8"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-http-server = "15"
jsonrpc-test = "15"
log = "0.4"
peach-lib = { git = "https://github.com/peachcloud/peach-lib", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ws = "0.9"
