[package]
name = "peach-menu"
version = "0.2.7"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Menu for monitoring and interacting with the PeachCloud device. A state machine which listens for GPIO events (button presses) by subscribing to peach-buttons over websockets and makes JSON-RPC calls to relevant PeachCloud microservices."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-menu"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
Menu for monitoring and interacting with the PeachCloud device. \
A state machine which listens for GPIO events (button presses) by \
subscribing to peach-buttons over websockets and makes JSON-RPC calls \
to relevant PeachCloud microservices."""
maintainer-scripts="debian"
systemd-units = { unit-name = "peach-menu" }
assets = [
    ["target/release/peach-menu", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/peach-menu/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-menu", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.38"
chrono = "0.4"
env_logger = "0.6"
futures = "0.3.8"
gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev.git", features = ["async-tokio"] }
log = "0.4"
peach-lib = { git = "https://github.com/peachcloud/peach-lib", branch = "main" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync"] }
